# twinkle

./: .env.example  .gitignore  CLAUDE.md  NIGHTLY_PROTOCOL.md  PROGRESS.md  README.md  pyproject.toml  roadmap.md
docs/: architecture.md  e2a-introduction.md  phase-0-design.md
scripts/: obs_smoke.py  obs_todo_smoke.py  start_services.py
tests/: conftest.py  test_agent_loop.py  test_agent_loop_compress.py  test_agent_loop_with_hooks.py  test_agentserver_handler.py  test_approval_flow.py  test_approval_registry.py  test_base.py  test_build_agent_loop_registers_permission.py  test_command_exec.py  test_command_exec_safety.py  test_config_context.py  test_context_compression.py  test_default_manager.py  test_e2a_ask_frame.py  test_echo.py  test_file_tools.py  test_hook_base.py  test_hook_context.py  test_hook_decorator.py  test_hook_manager.py  test_hook_manager_propagates_interrupt.py  test_integration.py  test_llm_client.py  test_local_function.py  test_memory_stub.py  test_message_handler.py  test_message_handler_approval_ask.py  test_observability.py  test_orphan_cleanup.py  test_permission_context.py  test_permission_hook.py  test_permissions_audit.py  test_permissions_builtin_rules.py  test_permissions_config.py  test_permissions_e2e.py  test_permissions_engine.py  test_permissions_models.py  test_permissions_package.py  test_permissions_policy.py  (+12 more)
twinkle/: __init__.py  config.py
twinkle/agentserver/: __init__.py  __main__.py  agent_loop.py  context_compression.py  llm_client.py  (+7 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+92 files in other folders)
